# interLoop

./: CMakeLists.txt  README.md  executor.c  expressions.c  loader.c  loop.c  makefile  result.txt  test_program_1.txt  test_program_2.txt  test_program_3.txt  test_program_4.txt  tokenReader.c  utilities.c  variables.c
headers/: executor.h  expressions.h  loader.h  loop.h  tokenReader.h
tests/: test_program.txt  test_program_1.txt  test_program_3.txt  test_program_4.txt  test_program_5.txt  test_program_6.txt
